--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -28,7 +28,7 @@ body {
 	    background-image: -webkit-linear-gradient(top, #00708F, #009698);
 	    background-image: linear-gradient(top, #00708F, #009698);
 	    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF00708F', endColorstr='#FF009698', GradientType=0);	    
-	    &.intro-visible {	    	
+	    &.visible {	    	
 	    	@include transform(translate(100%, 0));
 	    	@at-root {
 	    		.App {
@@ -81,15 +81,112 @@ body {
 		    }
 	    }
 	}
-	.site-wrap {
-		@include transform(translate(0, 0));
+	.fake-game-wrap {
+		@include transform(translate(100%, 0));
 	    @include transition(transform 0.3s $standard-curve);
+	    max-height: 100vh;
+		overflow: hidden;
+	    position: relative;
+	    width: 100vw;
+	    &.visible {
+	    	@include transform(translate(0, 0));
+	    	-webkit-animation: MovingGradient 20s ease infinite;
+			-moz-animation: MovingGradient 20s ease infinite;
+			animation: MovingGradient 20s ease infinite;
+			background: linear-gradient(140deg, #00708f 0%,#75cbc6 45%,#009698 71%,#11365a 100%);
+			background-size: 400% 400%;	    	
+	    	max-height: none;
+	    	position: fixed;
+
+			// @keyframes MovingGradient { 
+			//     0%{background-position:17% 0%}
+			//     50%{background-position:84% 100%}
+			//     100%{background-position:17% 0%}
+			// }
+			@at-root {
+	            @include keyframes(MovingGradient) {
+	                // 0%{background-position:17% 0%}
+
+				    // 50%{background-position:84% 100%}
+				    0%{background-position:17% 0%}
+				    25%{background-position:100% 0%}
+				    50%{background-position:100% 100%}
+				    75%{background-position:0% 100%}
+				    100%{background-position:17% 0%}
+	            }
+	        }
+	    }
+	    ul {
+	    	margin: 50px auto;
+	    	padding: 0;
+	    	width: 700px;
+	    	.fakeCard {
+			    background: rgba(255, 255, 255, 0.7);
+			    color: #00708F;
+			    display: inline-block;
+			    font-family: $font-serif;
+			    font-size: 16px;
+			    height: 80px;
+			    line-height: 60px;
+			    margin: 0 20px 10px 0;
+			    padding: 10px;
+			    position: relative;
+			    text-align: center;
+			    width: 80px;
+			    span {
+			    	position: absolute;
+			    	&:nth-child(1) {
+			    		top: 10px;
+			    		left: 10px;
+			    		height: 10px;
+			    		width: 10px;
+			    		border-top: 1px solid $blue;
+			    		border-left: 1px solid $blue;
+			    	}
+			    	&:nth-child(2) {
+			    		top: 10px;
+			    		right: 10px;
+			    		height: 10px;
+			    		width: 10px;
+			    		border-top: 1px solid $blue;
+			    		border-right: 1px solid $blue;
+			    	}
+			    	&:nth-child(3) {
+			    		bottom: 10px;
+			    		right: 10px;
+			    		height: 10px;
+			    		width: 10px;
+			    		border-bottom: 1px solid $blue;
+			    		border-right: 1px solid $blue;
+			    	}
+			    	&:nth-child(4) {
+			    		bottom: 10px;
+			    		left: 10px;
+			    		height: 10px;
+			    		width: 10px;
+			    		border-bottom: 1px solid $blue;
+			    		border-left: 1px solid $blue;
+			    	}
+			    }
+		    }
+
+	    }
+	}
+	.game-wrap {
+		@include transform(translate(100%, 0));
+	    @include transition(transform 0.3s $standard-curve);
+	    margin-top: -100px;
+	    max-height: 100vh;
 		overflow: hidden;
 	    position: relative;	    
 	    &.intro-visible {
-	    	box-shadow: 2px 0px 2px rgba(0,0,0,0.2);
-	    	max-height: 100vh;
-		    @include transform(translate(100%, 0));
+	    	// box-shadow: 2px 0px 2px rgba(0,0,0,0.2);
+	    	
+		    
+	    }
+	    &.visible {
+	    	@include transform(translate(0, 0));
+	    	max-height: none;
 	    }
 		header{
 
