--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -40,6 +40,15 @@
   animation: #{$str};
 }
 
+@mixin animation-delay($str) {
+  -webkit-animation-delay: #{$str};
+  animation-delay: #{$str};
+}
+@mixin animation-duration($str) {
+  -webkit-animation-duration: #{$str};
+  animation-duration: #{$str};
+}
+
 // Breakpoint: media queries
 @mixin breakpoint($point){
     @if ($point == xl){
