--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,28 +1,45 @@
-// body {
-// 	box-sizing: border-box;
-// 	.card {
-// 		background: rgba(0,0,0,.3);
-// 		margin: 0 0 30px;
-// 		max-height: 250px;
-// 		min-height: 100px;
-// 		width: 100%;
-		
-// 		p {
-// 			color: #fff;
-// 		}
-// 	}
-// }
-
 body {
 	header {
-		@include animation-delay(.5s)
+		@include transform(translate(0,-100%));
+		@include transition(transform .3s linear);
+		@include transition-delay(.3s);
 		background: rgba(0,0,0,.3);
+		padding: 20px 0;
 		position: relative;
 		z-index: 10;
+		@at-root {
+			.show-fake-game {
+				.fake-game-wrap {
+					header {
+						@include transform(translate(0,0));
+					}
+				}
+			}
+			.show-game {
+				.game-wrap {
+					header {
+						@include transform(translate(0,0));
+					}
+				}
+			}
+		}
+
 		ul {
 			@include clear-list-defaults;
+			margin: 0;
+			padding: 0;
+			width: 100%;
 			li {
-				color: $white;				
+				color: $white;	
+				display: inline-block;
+				margin: 0 30px; 
+				&:first-child {
+					margin: 0 130px 0 0;
+				}
+				&:last-child {
+					float:right;
+					margin: 0 0 0 30px;					
+				}		
 			}
 		}
 	}
@@ -40,11 +57,10 @@ body {
 	    background-image: -webkit-linear-gradient(top, #00708F, #009698);
 	    background-image: linear-gradient(top, #00708F, #009698);
 	    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF00708F', endColorstr='#FF009698', GradientType=0);	    
-	    &.visible {	    	
-	    	@include transform(translate(100%, 0));
-	    	@at-root {
-	    		.App {
-	    			overflow:hidden;
+	    @at-root {
+	    	.show-intro {
+	    		.intro-wrap {
+	    			@include transform(translate(100%, 0));
 	    		}
 	    	}
 	    }
@@ -94,95 +110,112 @@ body {
 	    }
 	}
 	.fake-game-wrap {
-		@include transform(translate(100%, 0));
+		@include transform(translate(100%, 100%));
 	    @include transition(transform 0.3s $standard-curve);
-	    max-height: 100vh;
 		overflow: hidden;
 	    position: relative;
+	    height: 100vh;
 	    width: 100vw;
-	    &.visible {
-	    	@include transform(translate(0, 0));
-			@include animation(MovingGradient 20s ease infinite);
-			background: linear-gradient(140deg, #00708f 0%,#75cbc6 45%,#009698 71%,#11365a 100%);
-			background-size: 400% 400%;	    	
-	    	max-height: none;
-	    	position: fixed;
-			@at-root {
-	            @include keyframes(MovingGradient) {
-				    0%{background-position:17% 0%}
-				    25%{background-position:100% 0%}
-				    50%{background-position:100% 100%}
-				    75%{background-position:0% 100%}
-				    100%{background-position:17% 0%}
-	            }
-	        }        
+		@at-root {
+	        @include keyframes(MovingGradient) {
+			    0%{background-position:17% 0%}
+			    25%{background-position:100% 0%}
+			    50%{background-position:100% 100%}
+			    75%{background-position:0% 100%}
+			    100%{background-position:17% 0%}
+	        }
+	        .show-fake-game {
+	        	.fake-game-wrap {
+		        	@include transform(translate(0, 100%));
+					@include animation(MovingGradient 20s ease infinite);
+					background: linear-gradient(140deg, #00708f 0%,#75cbc6 45%,#009698 71%,#11365a 100%);
+					background-size: 400% 400%;	    	
+			    	max-height: none;
+			    	position: fixed;
+			    }
+			    .pop-up {
+			    	opacity: 0;
+			    }
+	        }
+	        .show-game {
+	        	.fake-game-wrap {
+	        		@include transform(translate(-100%, 100%));
+	        	}
+	        }
 	    }
-	    &.animated {
-        	@include transform(translate(0, 0));
-        }
 	    .loading-element {
 	    	@include animation-duration(.3s)
+	    	@include transform(translate(-50%,-50%));
+	    	position: absolute;
+		    top: 50%;
+		    left: 50%;		    
 	    }
-	    ul {
-	    	margin: 50px auto;
-	    	padding: 0;
-	    	width: 700px;
-	    	.fakeCard {
-	    		@include transition(background .3 linear);
-			    background: rgba($white, 0.7);
-			    color: #00708F;
-			    cursor: pointer;
-			    display: inline-block;
-			    font-family: $font-serif;
-			    font-size: 12px;
-			    height: 40px;
-			    line-height: 24px;
-			    margin: 0 10px 10px 0;
-			    padding: 8px;
-			    position: relative;
-			    text-align: center;
-			    width: 40px;
-			    &:hover {
-			    	background: $white;
+	    .fakeGame  {
+			@include transition(opacity .3s linear);
+	    	opacity: 0;
+	    	&.visible {
+	    		opacity: 1;
+	    	}
+	    	ul {	    	
+		    	margin: 50px auto;		    	
+		    	padding: 0;
+		    	width: 700px;		    	
+		    	.fakeCard {
+		    		@include transition(background .3 linear);
+				    background: rgba($white, 0.7);
+				    color: #00708F;
+				    cursor: pointer;
+				    display: inline-block;
+				    font-family: $font-serif;
+				    font-size: 12px;
+				    height: 40px;
+				    line-height: 24px;
+				    margin: 0 10px 10px 0;
+				    padding: 8px;
+				    position: relative;
+				    text-align: center;
+				    width: 40px;
+				    &:hover {
+				    	background: $white;
+				    }
+				    span {
+				    	display: none;
+				    	position: absolute;
+				    	&:nth-child(1) {
+				    		top: 10px;
+				    		left: 10px;
+				    		height: 10px;
+				    		width: 10px;
+				    		border-top: 1px solid $blue;
+				    		border-left: 1px solid $blue;
+				    	}
+				    	&:nth-child(2) {
+				    		top: 10px;
+				    		right: 10px;
+				    		height: 10px;
+				    		width: 10px;
+				    		border-top: 1px solid $blue;
+				    		border-right: 1px solid $blue;
+				    	}
+				    	&:nth-child(3) {
+				    		bottom: 10px;
+				    		right: 10px;
+				    		height: 10px;
+				    		width: 10px;
+				    		border-bottom: 1px solid $blue;
+				    		border-right: 1px solid $blue;
+				    	}
+				    	&:nth-child(4) {
+				    		bottom: 10px;
+				    		left: 10px;
+				    		height: 10px;
+				    		width: 10px;
+				    		border-bottom: 1px solid $blue;
+				    		border-left: 1px solid $blue;
+				    	}
+				    }
 			    }
-			    span {
-			    	display: none;
-			    	position: absolute;
-			    	&:nth-child(1) {
-			    		top: 10px;
-			    		left: 10px;
-			    		height: 10px;
-			    		width: 10px;
-			    		border-top: 1px solid $blue;
-			    		border-left: 1px solid $blue;
-			    	}
-			    	&:nth-child(2) {
-			    		top: 10px;
-			    		right: 10px;
-			    		height: 10px;
-			    		width: 10px;
-			    		border-top: 1px solid $blue;
-			    		border-right: 1px solid $blue;
-			    	}
-			    	&:nth-child(3) {
-			    		bottom: 10px;
-			    		right: 10px;
-			    		height: 10px;
-			    		width: 10px;
-			    		border-bottom: 1px solid $blue;
-			    		border-right: 1px solid $blue;
-			    	}
-			    	&:nth-child(4) {
-			    		bottom: 10px;
-			    		left: 10px;
-			    		height: 10px;
-			    		width: 10px;
-			    		border-bottom: 1px solid $blue;
-			    		border-left: 1px solid $blue;
-			    	}
-			    }
-		    }
-
+			}
 	    }
 	}
 	.game-wrap {
@@ -192,27 +225,26 @@ body {
 	    max-height: 100vh;
 		overflow: hidden;
 	    position: relative;	    
-	    &.intro-visible {
-	    	// box-shadow: 2px 0px 2px rgba(0,0,0,0.2);
-	    	
-		    
-	    }
-	    &.visible {
-	    	@include transform(translate(0, 0));
-	    	@include animation(MovingGradient 20s ease infinite);			
-	       	background: linear-gradient(140deg, #00708f 0%,#75cbc6 45%,#009698 71%,#11365a 100%);
-			background-size: 400% 400%;	    	
-	    	max-height: none;
-	    	@at-root {
-	            @include keyframes(MovingGradient) {
-				    0%{background-position:17% 0%}
-				    25%{background-position:100% 0%}
-				    50%{background-position:100% 100%}
-				    75%{background-position:0% 100%}
-				    100%{background-position:17% 0%}
-	            }
-	        }
-	    }
+	    @at-root {
+	    	.show-game {
+			    .game-wrap {
+			    	@include transform(translate(0, 0));
+			    	@include animation(MovingGradient 20s ease infinite);			
+			       	background: linear-gradient(140deg, #00708f 0%,#75cbc6 45%,#009698 71%,#11365a 100%);
+					background-size: 400% 400%;	    	
+			    	max-height: none;
+			    	@at-root {
+			            @include keyframes(MovingGradient) {
+						    0%{background-position:17% 0%}
+						    25%{background-position:100% 0%}
+						    50%{background-position:100% 100%}
+						    75%{background-position:0% 100%}
+						    100%{background-position:17% 0%}
+			            }
+			        }
+			    }
+			}
+		}
 		section {
 			&.intro {
 
