--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/themes/custom/phelps/fonts/icomoon.eot?cqiz6p');
-  src:  url('/themes/custom/phelps/fonts/icomoon.eot?cqiz6p#iefix') format('embedded-opentype'),
-    url('/themes/custom/phelps/fonts/icomoon.ttf?cqiz6p') format('truetype'),
-    url('/themes/custom/phelps/fonts/icomoon.woff?cqiz6p') format('woff'),
-    url('/themes/custom/phelps/fonts/icomoon.svg?cqiz6p#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?i02fmy');
+  src:  url('../fonts/icomoon.eot?i02fmy#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?i02fmy') format('truetype'),
+    url('../fonts/icomoon.woff?i02fmy') format('woff'),
+    url('../fonts/icomoon.svg?i02fmy#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,80 +24,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-angle-left:before {
-  content: "\f104";
-}
-.icon-angle-right:before {
-  content: "\f105";
-}
-.icon-angle-up:before {
-  content: "\f106";
-}
-.icon-angle-down:before {
-  content: "\f107";
-}
-.icon-doctor:before {
-  content: "\e91f";
-}
-.icon-location-pin:before {
-  content: "\e920";
-}
-.icon-search:before {
-  content: "\e910";
-}
-.icon-left-arrow:before {
-  content: "\e911";
-}
-.icon-right-arrow:before {
-  content: "\e912";
-}
-.icon-close:before {
-  content: "\e913";
-}
-.icon-location-arrow:before {
-  content: "\e914";
-}
-.icon-minus:before {
-  content: "\e915";
-}
-.icon-plus:before {
-  content: "\e916";
-}
-.icon-circle-check:before {
-  content: "\e917";
-}
-.icon-print:before {
-  content: "\e918";
-}
-.icon-share:before {
-  content: "\e919";
-}
-.icon-email:before {
-  content: "\e91a";
-}
-.icon-facebook:before {
-  content: "\e91b";
-}
-.icon-linkedin:before {
-  content: "\e91c";
-}
-.icon-twitter:before {
-  content: "\e91d";
-}
-.icon-youtube:before {
-  content: "\e91e";
+.icon-x:before {
+  content: "\e900";
 }
 
-@mixin excluded-lists{
-    @include not('.dropdown-menu', '.pager__items', '.contextual-links') {
-        @content
-    }
-}
-@mixin excluded-a {
-    @include not('.more', '.video', '.btn-purple', '[role="option"]') {
-        @content
-    }
-}
 body {
     color: $text;
     font-family: $font;
@@ -148,206 +78,16 @@ body {
         font-size: 18px;
         line-height: 30px;
     }
-    ul {
-        &.unstyled {
-            list-style-type: none;
-            padding:0;
-            li {
-                &::before {
-                    display: none;
-                }
-            }
-        }
-        &.styled {
-            list-style-type: none;
-            padding:0;
-            li {
-                position: relative;
-                padding-left:20px;                    
-                &::before {
-                    content: "\2022";
-                    color: $blue;
-                    font-size:30px;
-                    left:0;
-                    position: absolute;
-                    top:0;
-                    // @include translate(0,-50%);
-                }
-            }
-        } 
-    }
-    a {
-        color: $blue;
-        @include transition(color .3s linear);
-        &:hover, &:focus {
-            color: $teal;
-            text-decoration: none;
-        }
-        &[href*=".pdf"] {
-            position: relative;
-            margin-left: 25px;
-            &:after {                
-                position: absolute;
-                top: 0;
-                left: -20px;
-                width: 16px;
-                height: 18px;
-                background-position: left center;
-                background-size: 100% 100%;
-                content: '';
-            }
-        }
-    }
-    blockquote {
-        position: relative;
-        margin: 20px 0;
-        font-family: $font;
-        font-style: italic;
-        font-weight: 300;
-        padding: 0 0 0 22px;
-        border: none;
-        font-size: 24px;
-        line-height: 36px;
-        &:after {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 6px;
-            width: 3px;
-            height: calc(100% - 12px);
-            background-color: #ffbc42;            
-        }
-        @media screen and (min-width: 768px) {
-            margin: 23px 0 25px;            
-            line-height: 36px;
-            p {
-                font-size: 24px;
-                line-height: 36px !important;
-            }
-        }
-        p {
-          font-family: $font;
-
-        }
-    }
+    
+    
     
 
     img {
         max-width: 100%;
         height: auto;
-        &.pull-right {
-            @include breakpoint(xs) {
-                display: block;
-                float: none;
-                margin-bottom:30px;
-            }
-        }
+        
     }
-    article {
-        ul:not(.contextual-links) {
-            margin-bottom:20px;
-            list-style-type: none;
-            padding: 0;
-            li {
-                position: relative;
-                padding-left:20px;
-                font-size: 18px;
-                font-weight: 500;
-                line-height: 28px;
-                margin-bottom:13px;
-                &::before {
-                    content: "\2022";
-                    color: $text;
-                    font-size:30px;
-                    left:0;
-                    position: absolute;
-                    top: 2px;
-                    // @include translate(0,-50%);
-                }
-                p {
-                  margin: 0;
-                }
-            }
-            &.two-col {
-                columns:2;
-                @include breakpoint(xs) {
-                    columns:1;
-                }
-            }
-            &.styled {
-                list-style-type: none;
-                padding:0;
-                li {
-                    position: relative;
-                    padding-left:20px;                    
-                    &::before {
-                        content: "\2022";
-                        color: $blue;
-                        font-size:30px;
-                        left:0;
-                        position: absolute;
-                        top:0;
-                        // @include translate(0,-50%);
-                    }
-                }
-            }            
-        }
-        ol {
-            counter-reset: section;  
-            list-style-type: none;
-            margin-bottom:20px;
-            padding: 0;
-            &.two-col {
-                columns:2;
-                @include breakpoint(xs) {
-                    columns:1;
-                }
-            }
-            li {
-                font-size: 18px;
-                font-weight: $regular;
-                line-height: 28px;
-                margin-bottom:10px;
-                padding-left: 20px;
-                position: relative;
-                &::before {
-                    color: $text;
-                    counter-increment: section;           
-                    content: counter(section);
-                    font-size:18px;
-                    font-weight: $semibold;
-                    left: 0;
-                    line-height: 28px;
-                    position: absolute;
-                    top: 0;
-                }
-            }
-            &.styled {
-                li {
-                    &::before {
-                        color: $blue;
-                        counter-increment: section;           
-                        content: counter(section);
-                        font-size:18px;
-                        font-weight: $semibold;
-                        left: 0;
-                        line-height: 28px;
-                        position: absolute;
-                        top: 0;
-                    }
-                }
-            }
-            &.unstyled {
-                list-style-type: decimal;
-                li {
-                  padding: 0;
-                    &::before {
-                        content: none;;
-                    }
-                }
-            }
-        }
-    }
+    
     .btn {
         @include transition(background .3s linear, color .3s linear);
         @include clear-button-defaults;
@@ -381,7 +121,7 @@ body {
             line-height: 28px;
             padding: 11px 40px 15px;
         }
-        &.banner {
+        &.white {
             background: rgba($white ,0.7);
             color: $blue;
             display: inline-block;
