--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -29,7 +29,7 @@
 }
 
 body {
-    color: $text;
+    color: $slate;
     font-family: $font;
     font-size: 18px;
     font-weight: $regular;
@@ -185,9 +185,10 @@ body {
             background-image: -webkit-linear-gradient(left, rgba(0,112,143,1) 50%,rgba(117,203,198,1) 100%);
             background-image: linear-gradient(left, rgba(0,112,143,1) 50%,rgba(117,203,198,1) 100%);
             background-size: 200%;
-            background-position: 100%;
+            background-position: 99%;
+            color: $white;
             &:hover {
-                background-position: 0;
+                background-position: 10%;
             }
         }
     }   
