--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $green: #00825f;
 $mint: #75cbc6;
 $slate: #4d4d4f;
 $teal: #009698;
-$text: #4d4d4f;
+$slate: #4d4d4f;
 $yellow: #ffbc42;
 $white: #fff;
 
