--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -49,6 +49,11 @@
   animation-duration: #{$str};
 }
 
+@mixin animation-timing-function($str) {
+  -webkit-animation-timing-function: #{$str};
+  animation-timing-function: #{$str};
+}
+
 // Breakpoint: media queries
 @mixin breakpoint($point){
     @if ($point == xl){
