--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -46,6 +46,23 @@ body {
 				}
 				> * {
 					margin: 0;
+				}
+				> span {
+					bottom: 8px;
+					color: $white;
+					display: inline-block;
+    				position: relative;
+					&[class*="icon-"] {
+						@include transition(color .3s linear);
+						cursor: pointer;
+						display: inline-block;
+						font-size: 30px;
+    					margin: 10px 0 0 0;
+    					position: static;
+    					&:hover {
+    						color: $mint;
+    					}
+					}
 				}		
 			}
 		}
@@ -57,6 +74,8 @@ body {
 	    top: 50%;
 	    left: 50%;		    
     }
+
+    // Scree with youtube video
 	.intro-wrap {
 		@include transform(translate(0, 0));
 	    @include transition(transform 0.3s $standard-curve);
@@ -125,6 +144,8 @@ body {
 		    }
 	    }
 	}
+
+	// fake game screen
 	.fake-game-wrap {
 		@include transform(translate(100%, 100%));
 	    @include transition(transform 0.3s $standard-curve);
@@ -180,11 +201,12 @@ body {
 			}
 	    }
 	}
+	// real game
 	.game-wrap {
 		@include transform(translate(100%, 0));
-	    @include transition(transform 0.3s $standard-curve);
+	    @include transition(transform 0.3s $standard-curve);	    
+	    height: 100vh;
 	    margin-top: -100vh;
-	    max-height: 100vh;
 		overflow: hidden;
 	    position: relative;	    
 	    @at-root {
@@ -193,6 +215,18 @@ body {
 			    	@include transform(translate(0, 0));
 			    	max-height: none;
 			    }
+			}
+		}
+		button {
+			&.new-game-btn {
+				@include transform(translate(0, 100%));				
+				bottom:0;
+				margin: 0;
+				position: absolute;				
+				right:0;
+				&.animate {
+					@include animation(slideInUp $desktop-enter $decelerated-curve 1s 1 both)
+				}
 			}
 		}
 		section {
@@ -221,89 +255,51 @@ body {
 			            }
 			        }
 			        &.animate {
-			        	@include animation(slideInUpSmall $desktop-enter $decelerated-curve 1s 1 both);
+			        	@include animation(slideInUpSmall $desktop-enter $decelerated-curve 1.3s 1 both);
 			        	&:nth-child(1) {
-			        		@include animation-delay(.5s);
+			        		@include animation-delay(1.5s);
 			        	}
 			        	&:nth-child(2) {
-			        		@include animation-delay(.55s);
+			        		@include animation-delay(1.55s);
 			        	}
 			        	&:nth-child(3) {
-			        		@include animation-delay(.6s);
+			        		@include animation-delay(1.6s);
 			        	}
 			        	&:nth-child(4) {
-			        		@include animation-delay(.65s);
+			        		@include animation-delay(1.65s);
 			        	}
 			        	&:nth-child(5) {
-			        		@include animation-delay(.7s);
+			        		@include animation-delay(1.7s);
 			        	}
 			        	&:nth-child(6) {
-			        		@include animation-delay(.75s);
+			        		@include animation-delay(1.75s);
 			        	}
 			        	&:nth-child(7) {
-			        		@include animation-delay(.8s);
+			        		@include animation-delay(1.8s);
 			        	}
 			        	&:nth-child(8) {
-			        		@include animation-delay(.85s);
+			        		@include animation-delay(1.85s);
 			        	}
 			        	&:nth-child(9) {
-			        		@include animation-delay(.9s);
+			        		@include animation-delay(1.9s);
 			        	}
 			        	&:nth-child(10) {
-			        		@include animation-delay(.95s);
+			        		@include animation-delay(1.95s);
 			        	}
 			        	&:nth-child(11) {
-			        		@include animation-delay(1s);
+			        		@include animation-delay(2s);
 			        		margin-left: 85px;
 			        	}
 			        	&:nth-child(12) {
-			        		@include animation-delay(1.05s);
+			        		@include animation-delay(2.05s);
 			        	}
 			        	&:nth-child(13) {
-			        		@include animation-delay(1.1s);
+			        		@include animation-delay(2.1s);
 			        	}
 			        	&:nth-child(14) {
-			        		@include animation-delay(1.15s);
+			        		@include animation-delay(2.15s);
 			        	}
-			        	&:nth-child(15) {
-			        		@include animation-delay(1.2s);
-			        	}
-			        	&:nth-child(16) {
-			        		@include animation-delay(1.25s);
-			        	}
-			        }
-					.card {
-					    position: relative;
-					    overflow: hidden;
-					    height: 150px;
-						    
-						.front, .back {
-							position: relative;
-					    	overflow: hidden;
-					    	height: 150px;
-
-						}
-						.front {
-							&:hover {
-						    	cursor: pointer;
-						    }
-					    	.text {
-								position: absolute;
-								padding: 30px 15px 15px;
-								z-index: 1;
-								top: 0;
-								bottom: 0;
-								left: 0;
-								h4, p {
-									color: $blue;
-								}
-								p {
-									font-size: 14px;
-									line-height: 22px;
-								}	
-							}			
-						} 
-					}
+			        }					
 					&:nth-of-type(8n-7) {
 						.card {
 							.front {
@@ -511,6 +507,37 @@ body {
 								}
 							}					
 						}
+					}
+					.card {
+					    position: relative;
+					    overflow: hidden;
+					    height: 150px;						    
+						.front, .back {
+							position: relative;
+					    	overflow: hidden;
+					    	height: 150px;
+
+						}
+						.front {
+							&:hover {
+						    	cursor: pointer;
+						    }
+					    	.text {
+								position: absolute;
+								padding: 30px 15px 15px;
+								z-index: 1;
+								top: 0;
+								bottom: 0;
+								left: 0;
+								h4, p {
+									color: $blue;
+								}
+								p {
+									font-size: 14px;
+									line-height: 22px;
+								}	
+							}			
+						} 
 					}
 				}
 			}
