--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -105,3 +105,109 @@ footer.footer {
 }
 
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+  
+
+
+.ThemeDark {
+    background: #1b1b1b;
+    .header_container {
+        background: #1b1b1b;
+        .logo {
+            a {
+                color: #fff;
+            }
+        }
+        .cartButton {
+            color: #fff;
+        }    
+    }
+
+    .products {
+        background: #1b1b1b;
+        .product {
+            .product_price,
+            .product_title {
+                a {
+                    color: #fff;
+                }
+            }
+            .product_content {
+                button.newsletter_button {
+                    border: solid 2px #ffffff;
+                    background: #1b1b1b;
+                    span {
+                        color: #ffffff;
+                    }
+                    &::after {
+                        background: #ffffff;
+                    }
+                    &:hover {
+                        span {
+                            color: #1b1b1b;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+}
