--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -61,7 +61,7 @@ footer.footer {
     position: absolute;
     top: 0;
     padding-top: 130px;
-    height: 700px;
+    height: 100vh;
     width: 100%;
     overflow: scroll;
     transform: translateY(-100%);
