--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -174,6 +174,7 @@ footer.footer {
 
 .ThemeDark {
     background: #1b1b1b;
+
     .header_container {
         background: #1b1b1b;
         .logo {
@@ -184,6 +185,10 @@ footer.footer {
         .cartButton {
             color: #fff;
         }    
+    }
+
+    .LoadingElement {
+        fill: #fff !important;
     }
 
     .products {
